<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackgroundBorderless">

        <ImageView
            android:id="@+id/iv_good_pic"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="80:115"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_cart_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_minus"
            android:padding="4dp"
            android:src="@drawable/ic_delete_circle"
            android:tint="@color/colorBackgroundMain"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_good_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@id/iv_good_pic"
            app:layout_constraintRight_toLeftOf="@id/ib_cart_delete"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Товар" />

        <TextView
            android:id="@+id/tv_good_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintLeft_toRightOf="@id/iv_good_pic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_good_title"
            tools:text="156 руб." />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageButton
                android:id="@+id/ib_cart_count_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/action_minus"
                android:padding="4dp"
                android:src="@drawable/ic_minus"
                android:tint="@color/colorBackgroundMain" />

            <TextView
                android:id="@+id/tv_cart_count"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="2" />

            <ImageButton
                android:id="@+id/ib_cart_count_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/action_minus"
                android:padding="4dp"
                android:src="@drawable/ic_plus"
                android:tint="@color/colorBackgroundMain" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>