...
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_cart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="160 руб"/>

                <Button
...
                    android:layout_gravity="center_vertical|end"
                    android:enabled="false"
                    android:text="@string/action_offer"/>
            </FrameLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorBackgroundMain"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@id/fl_price_block"
                app:layout_constraintLeft_toLeftOf="parent"
...
